--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.jpg filter=lfs diff=lfs merge=lfs -text
 node_modules/.cache/default-development/*.pack filter=lfs diff=lfs merge=lfs -text
+node_modules/.cache/default-development/0.pack filter=lfs diff=lfs merge=lfs -text
+node_modules/.cache/default-development/12.pack filter=lfs diff=lfs merge=lfs -text
