--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 node_modules/.cache/default-development/0.pack
 node_modules/.cache/default-development/5.pack
 node_modules/.cache/default-development/12.pack
+node_modules/
